--- a/Day 2/codice/ProgettoJunit/pom.xml
+++ b/Day 2/codice/ProgettoJunit/pom.xml
@@ -38,11 +38,18 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            <!--
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
                 <version>7.4.3</version>
+                <!--
+                <configuration>
+                    <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
+                    <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
+                    <nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
+                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                </configuration>
+                -->
                 <executions>
                     <execution>
                         <goals>
@@ -51,7 +58,7 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
+
         </plugins>
     </build>
 
