--- a/Day 2/codice/SpringBootREST/src/main/resources/application.properties
+++ b/Day 2/codice/SpringBootREST/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 
-spring.datasource.url=jdbc:mysql://localhost:8889/esercitazione
-spring.datasource.username=diemme
-spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-# Configurazione del file di log
-logging.level.root=WARN
-logging.file.name=logs/application.log
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L %m%n
+#spring.datasource.url=jdbc:mysql://localhost:8889/esercitazione
+#spring.datasource.username=diemme
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+## Configurazione del file di log
+#logging.level.root=WARN
+#logging.file.name=logs/application.log
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L %m%n
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
