--- a/Day 2/codice/SpringBootRESTOrigin/src/main/resources/application.properties
+++ b/Day 2/codice/SpringBootRESTOrigin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:8889/esercitazione
 spring.datasource.username=diemme
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
